adding a new component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="wrapper">
+  <app-prompt-area></app-prompt-area>
   <div class="content-container">
-    <app-prompt-area></app-prompt-area>
     <app-button-list></app-button-list>
+    <app-preview-area></app-preview-area>
   </div>
 </div>
