--- a/src/app/components/preview-area/preview-area.component.scss
+++ b/src/app/components/preview-area/preview-area.component.scss
@@ -1,14 +1,24 @@
 .preview-area {
-    width: 50%;
-    min-height: 300px;
+    min-height: 215px;
     border: 1px solid #ddd;
-    padding: 20px;
+    padding: 11px 20px 20px 20px;
     border-radius: 8px;
     background-color: #fafafa;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+  h3{
+    margin: 0;
+    font-size: 16px;
+    color: rgb(32, 26, 27)
+    ;
   }
   
-  .preview-content {
-    font-size: 16px;
-    color: #333;
+  .preview-content img {
+    margin-top: 17px;
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
   }
   
