--- a/src/app/components/button-list/button-list.component.scss
+++ b/src/app/components/button-list/button-list.component.scss
@@ -76,8 +76,8 @@
     padding: 0;
     margin: 0;
 
-    button {
-      padding: 10px 20px;
+    .dropdown-item {
+      padding: 5px 20px;
       /* Match the main button's padding */
       font-size: 14px;
       color: #333;
