--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,10 +20,12 @@ div {
     text-align: center;
     /* Ensure the text aligns properly */
 }
+
 app-button-list,
 app-preview-area {
-    flex: 1; /* Each takes 50% of available space */
-  }
+    flex: 1;
+    /* Each takes 50% of available space */
+}
 
 
 .content-container {
@@ -32,4 +34,12 @@ app-preview-area {
     gap: 20px;
     margin: 20px;
     width: 450px;
-  }
+
+    /* MOBILE RESPONSIVENESS */
+    @media (max-width: 768px) {
+        flex-direction: column;
+        /* Stack on mobile */
+        width: auto;
+        /* Take full width */
+    }
+}
