--- a/src/app/components/prompt-area/prompt-area.component.scss
+++ b/src/app/components/prompt-area/prompt-area.component.scss
@@ -3,16 +3,6 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    // width: 100%; /* Default: take full width */
-    // max-width: 450px; /* Same max-width as content-container */
-    // min-width: 200px; /* Minimum width before breaking */
-    // margin-bottom: 20px; /* Space from the content-container */
-
-    // /* MOBILE RESPONSIVENESS */
-    // @media (max-width: 768px) {
-    //     max-width: 100%; /* Take full width on mobile */
-    //     min-width: unset; /* Remove the minimum limit */
-    // }
 
     textarea {
         width: 428px;
@@ -22,29 +12,32 @@
         border-radius: 8px;
         font-size: 16px;
         resize: vertical;
+        position: relative;
 
         /* MOBILE RESPONSIVENESS */
         @media (max-width: 768px) {
-            /* Stack on mobile */
             max-width: 240px;
-            /* Take full width */
         }
     }
 
-        .copy-button {
+    .prompt-controls {
+        display: flex;
+        position: absolute;
+        top: 7px;
+        right: 7px;
+        gap: 5px;
+
+        button {
             display: flex;
             align-items: center;
-            gap: 5px;
+            justify-content: center;
             background: transparent;
             border: none;
             font-size: 16px;
             color: #333;
             cursor: pointer;
-            padding: 5px 10px;
+            padding: 5px;
             border-radius: 5px;
-            position: absolute;
-            top: 7px;
-            right: 7px;
             transition: color 0.3s ease;
 
             &:hover {
@@ -56,3 +49,4 @@
             }
         }
     }
+}
