--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,7 @@
     <app-button-list></app-button-list>
     <app-preview-area></app-preview-area>
   </div>
+  <footer class="app-footer">
+    <p>Version  {{ version }}  | Created by Sebastian Fontana</p>
+  </footer>
 </div>
