--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -43,3 +43,17 @@ app-preview-area {
         /* Take full width */
     }
 }
+
+.app-footer {
+    text-align: center;
+    padding: 10px;
+    font-size: 12px;
+    color: #666;
+    border-top: 1px solid #ccc;
+    margin-top: 20px;
+    opacity: 0.8;
+
+    p {
+        margin: 0;
+    }
+}
